# risc-b

./: .gitmodules  LICENSE  README.md
backend/: .env.example  Cargo.toml  redis-stack-v6.conf  redis-stack.conf
backend/scripts/: setup_redis.py  test.py
backend/src/: main.rs
backend/src/api/: kbbitype.rs  mod.rs  v1.rs
frontend/: .env  package.json  pnpm-lock.yaml  prettier.config.cjs  vite.config.ts  webapp.sh
frontend/public/: manifest.json
frontend/public/_locales/en/: messages.json
frontend/public/_locales/id/: messages.json
frontend/src/: app.css  global.d.ts  vite-env.d.ts
frontend/src/assets/: risc.xcf
frontend/src/background/: index.html  main.ts
frontend/src/lib/: processor.ts  stores.ts
frontend/src/options/: Main.svelte  Whitelist.svelte  index.html
frontend/src/popup/: Detail.svelte  Footer.svelte  Header.svelte  Input.svelte  Main.svelte  Suggestion.svelte  main.ts
