[package]
name = "risc-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
actix-web = "4"
bb8 = "0.8.0"
bb8-redis = "0.12.0"
dotenv = "0.15.0"
env_logger = "0.9"
redis = { version = "0.22.1", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
